GPencil: "Bake object transform" operator wrong transformation of layer relations #97851

Closed
opened 2022-05-04 14:45:07 +02:00 by Aleš Jelovčan · 7 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce MX330/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.91

Blender Version
Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: cc66d1020c
Worked: never
Short description of error
Please see video
2022-05-04 14-41-56.mp4

Exact steps for others to reproduce the error
Parent layers in this section and bake results
image.png
Please find file attached:
armedd2.blend

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce MX330/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.91 **Blender Version** Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `cc66d1020c` Worked: never **Short description of error** Please see video [2022-05-04 14-41-56.mp4](https://archive.blender.org/developer/F13051218/2022-05-04_14-41-56.mp4) **Exact steps for others to reproduce the error** Parent layers in this section and bake results ![image.png](https://archive.blender.org/developer/F13051221/image.png) Please find file attached: [armedd2.blend](https://archive.blender.org/developer/F13051223/armedd2.blend)

Added subscriber: @frogstomp-4

Added subscriber: @frogstomp-4

Added subscriber: @antoniov

Added subscriber: @antoniov

what is wrong? that bake object still has relation?

Edit: Now I can see.. (I could not see the video before)

what is wrong? that bake object still has relation? Edit: Now I can see.. (I could not see the video before)

No, relations are cleared, as they should be.
But expected result after baking would be a clean grease pencil object, looking exactly like original, but without any parenting, modifier and so on.

Also tested with parenting to basic object, not bone and it is the same.

No, relations are cleared, as they should be. But expected result after baking would be a clean grease pencil object, looking exactly like original, but without any parenting, modifier and so on. Also tested with parenting to basic object, not bone and it is the same.
Antonio Vazquez changed title from Grease pencil "Bake object transform" operator wrong transformation of layer relations to GPencil: "Bake object transform" operator wrong transformation of layer relations 2022-05-04 16:00:17 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Antonio Vazquez self-assigned this 2022-05-04 16:00:26 +02:00

This issue was referenced by b5c3885bf0

This issue was referenced by b5c3885bf05247cb1ddd4569ff13f55f40752d2f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97851
No description provided.