Fix T97851: GPencil Bake object transform operator wrong transformation

The problem was the layer transformation was already applied in the layer and if we apply in the bake, we are doing double transformation.

Differential Revision: https://developer.blender.org/D14844